# ncr_numpy

./: LICENSE  Makefile  README.rst  TODO.rst  compile_flags.txt  ncr_numpy.hpp
bench/: .gitignore  Makefile  README.md  bench.cpp
example/: CMakeLists.txt  Makefile  compile_flags.txt  example.cpp
example/assets/: genfiles.py
example/assets/in/: complex.npy  multiple_unnamed.npz  nested.npy  simple.npz
examples/: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt  example.cpp
examples/assets/: genfiles.py
examples/assets/in/: complex.npz  multiple_named.npz  nested.npy  simpletensor1.npy  simpletensor1.npz  simpletensor2.npy  simpletensor2.npz  structured.npy
include/ncr/: bits.hpp  bswapdefs.hpp  common.hpp  core.hpp  dtype.hpp  ndarray.hpp  ndindex.hpp  npybuffers.hpp  npyerror.hpp  npyfile.hpp  numpy.hpp  pyparser.hpp  strconv.hpp  types.hpp  unicode.hpp  utility.hpp  zip.hpp
include/ncr/common/: bits.hpp  type_operators.hpp  types.hpp  unicode.hpp  utils.hpp
include/ncr/core/: bits.hpp  common.hpp  filesystem.hpp  memory.hpp  string.hpp  string_conversions.hpp  type_operators.hpp  types.hpp  unicode.hpp  units.hpp  utils.hpp  zip.hpp
include/ncr/core/impl/: zip_libzip.hpp
include/ncr/impl/: zip_libzip.hpp
include/ncr/numpy/: core.hpp  declarations.hpp  dtype.hpp  ndarray.hpp  npy.hpp  pyparser.hpp  utils.hpp
meta/: fusor.py  ncr_numpy.hpp.in
ncr/: ncr_bits.hpp  ncr_ndarray.hpp  ncr_numpy.hpp  ncr_numpy_impl_libzip.cpp  ncr_numpy_zip.hpp  ncr_numpy_zip_impl_libzip.hpp  ncr_pyparser.hpp  ncr_types.hpp  ncr_unicode.hpp  ncr_zip.hpp  ncr_zip_impl_libzip.hpp
paper/: paper.md
